--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "financial-planner-3-appserver",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "App server for financial-planner-3",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "start": "node .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/viktormuller/financial-planner-3-appserver/issues"
   },
-  "homepage": "https://github.com/viktormuller/financial-planner-3-appserver#readme"
+  "homepage": "https://github.com/viktormuller/financial-planner-3-appserver#readme",
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "plaid": "^8.1.2"
+  }
 }
