moved CORS url to config

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,8 @@ publish.bat
 .DS_Store
 .env
 .env.local
-.env.development.local
+.env.dev
+.env.prod
 .env.test.local
 .env.production.local
 .eslintcache
