prod cors config update

--- a/.env.conf.prod
+++ b/.env.conf.prod
@@ -4,5 +4,5 @@ PLAID_SECRET=80d99ab8e5884a6cf5608354829887
 
 [Service]
 Environment=PLAID_ENV=https://production.plaid.com
-Environment=CORS_URL=https://dev.enoughcalc.com
+Environment=CORS_URL=https://www.enoughcalc.com
 Environment=NODE_ENV=production
