--- a/.env.conf.prod
+++ b/.env.conf.prod
@@ -1,8 +1,4 @@
-# Get your Plaid API keys from the dashboard: https://dashboard.plaid.com/account/keys
-PLAID_CLIENT_ID=5fe1f07b354a870014623a67
-PLAID_SECRET=80d99ab8e5884a6cf5608354829887
-
 [Service]
-Environment=PLAID_ENV=https://production.plaid.com
-Environment=CORS_URL=https://www.enoughcalc.com
-Environment=NODE_ENV=production
+Environment="PLAID_ENV=https://production.plaid.com"
+Environment="CORS_URL=https://www.enoughcalc.com"
+Environment="NODE_ENV=production"
