Refactored into router and server

--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,6 @@ publish.bat
 
 # production
 /build
-/public/.htaccess
 
 # misc
 .DS_Store
@@ -22,6 +21,7 @@ publish.bat
 .env.test.local
 .env.production.local
 .eslintcache
+/.vscode
 
 npm-debug.log*
 yarn-debug.log*
