--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "plaid": "^8.1.3"
+    "financial-planner-api": "file:..\\financial-planner-api",
+    "plaid": "^8.1.3",
+    "typescript": "^4.1.3"
   }
 }
