--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-jwt-authz": "^2.4.1",
     "financial-planner-api": "file:..\\financial-planner-api",
+    "jwks-rsa": "^1.12.2",
     "plaid": "^8.1.3",
     "typescript": "^4.1.3"
   }
